<resources>
    <string name="app_name">Inventory App</string>

    <string name="spinner_other">Other</string>
    <string name="spinner_sofas">Sofas</string>
    <string name="spinner_chairs">Chairs</string>
    <string name="spinner_tables">Tables</string>
    <string name="spinner_beds">Beds</string>
    <string name="spinner_desks">Desks</string>
    <string name="spinner_cabinets">Cabinets</string>
    <string name="spinner_wardrobes">Wardrobes</string>
    <string name="spinner_textiles">Textiles</string>
    <string name="spinner_decoration">Decoration</string>

    <string name="detail_activity_item_name">Name: </string>
    <string name="detail_activity_hint_name">Name of the item</string>
    <string name="detail_activity_item_description">Description: </string>
    <string name="detail_activity_hint_description">Information of the item</string>
    <string name="detail_activity_item_category">Category: </string>
    <string name="detail_activity_item_supplier">Supplier: </string>
    <string name="detail_activity_hint_supplier">e.g. IKEA</string>
    <string name="detail_activity_item_price">Price EUR: </string>
    <string name="detail_activity_hint_price">e.g. 59.90</string>
    <string name="detail_activity_item_stock">In Stock:</string>
    <string name="decrement_button">-</string>
    <string name="increment_button">+</string>
    <string name="order_button">Order</string>
    <string name="detail_activity_hint_quantity">12</string>
    <string name="sell_button">Sell</string>

    <string name="no_name_provided">No Name Provided</string>
    <string name="out_of_stock">Out of Stock</string>
    <string name="in_stock">In Stock</string>

    <string name="item_photo_thumbnail">Image of the added item.</string>
    <string name="add_icon">Image for adding a new item.</string>

    <!-- Toast messages for Quantity values -->
    <string name="quantity_no_value">Enter some value</string>
    <string name="quantity_no_negative">Value can\'t be negative</string>
    <string name="quantity_limit">Value can\'t be more than 1000.</string>

    <!-- Toast messages for item requirements -->
    <string name="toast_require_attributes">The Item requires some information</string>
    <string name="toast_require_picture">The Item requires an image</string>
    <string name="toast_require_name">The Item requires a name</string>

    <!-- Toast messages for saving and updating the item -->
    <string name="error_save_item">Error with saving the item</string>
    <string name="saved_item">Item saved</string>
    <string name="error_update_item">Error with updating the item </string>
    <string name="updated_item">Item updated</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="discard_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current pet [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current pet was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_item_successful">Item deleted</string>

    <!-- Toast message in editor when current pet has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_item_failed">Error with deleting item</string>

    <!-- Dialog message to ask the user to confirm deleting the current pet [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this item?</string>

    <!-- Dialog button text for the option to confirm deleting the current pet [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current pet [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Dialog message to ask the user to confirm deleting all items [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_all_items_msg">Delete all items?</string>

    <!-- Toast message in editor when all items from the database were successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_all_items_successful">Items deleted</string>

    <!-- Toast message in editor when all items from the database have failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_all_items_failed">Error with deleting all items</string>

    <string name="order_supplier_email">mailto: example_supplier@gmail.com</string>
    <string name="order_extra_supplier_email">To example_supplier@gmail.com</string>

    <string name="detail_activity_title_add_item">Add Item</string>
    <string name="detail_activity_title_edit_item">Edit Item</string>

    <string name="empty_view_text">It\'s a bit lonely here.</string>
    <string name="empty_view_text_subtitle">Start by adding a new item.</string>

    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <string name="action_delete_all_items">Delete All Items</string>

    <string name="action_save">Save</string>

    <string name="action_delete">Delete</string>

    <string name="unknown_type">Unknown type</string>

    <string name="dummy_picture_uri">android.resource://com.example.root.inventory_app/drawable/table_ikea</string>
</resources>
