<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/item_picture"
        style="@style/itemImage_thumbnail"
        android:contentDescription="@string/item_photo_thumbnail"
        android:src="@drawable/table_ikea" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin_6dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/item_name"
            style="@style/itemName_Title"
            android:layout_marginBottom="@dimen/layout_margin_6dp"
            tools:text="@string/detail_activity_hint_name" />

        <TextView
            android:id="@+id/item_type"
            style="@style/itemName_Title.Category"
            tools:text="@string/spinner_other" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                style="@style/LinearLayout_horizontal"
                android:gravity="start">

                <TextView
                    android:id="@+id/price_text_view"
                    style="@style/itemName_Title.Price"
                    android:layout_marginRight="@dimen/layout_margin_6dp"
                    android:text="@string/detail_activity_item_price" />

                <TextView
                    android:id="@+id/item_price"
                    style="@style/itemName_Title.Price"
                    android:paddingLeft="@dimen/layout_margin_6dp"
                    tools:text="30" />

            </LinearLayout>

            <LinearLayout
                style="@style/LinearLayout_horizontal"
                android:gravity="end">

                <TextView
                    android:id="@+id/item_in_stock"
                    style="@style/itemName_Title.Price"
                    tools:text="@string/in_stock" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="3"
                android:orientation="vertical">

                <Button
                    android:id="@+id/sell_button"
                    style="@style/AppTheme.ButtonStyle"
                    android:focusable="false"
                    android:text="@string/sell_button" />

            </LinearLayout>

            <TextView
                android:id="@+id/item_quantity"
                style="@style/itemName_Title.Price.Quantity"
                tools:text="15" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>